feat: ajuste na infra do microserviço
